src/App.scss
$primary: #1e4151;
$secondary: #f2ede0;
$secondary-alt: #ffffff;

$theme-colors: (
  "primary": $primary,
  "secondary": $secondary
);

@import "~bootstrap/scss/bootstrap";

.App {
  text-align: center;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
  font-size: 1.0rem;
}

h1, h2, h3, h4, h5, h6 {
  color: $primary;
  font-weight: 700 !important;
}

a:link {
  text-decoration: none;
}


/* ===== NAV BAR ===== */

.navbar {
  background-color: $primary;
  z-index: 1000;
}

.navbar-brand img {
  max-width: 42px;
  padding-right: 10px;
}

.navbar-brand span {
  color: $secondary;
  font-weight: 700 !important;
}

.navbar-brand span.navbar-brand-subtitle {
  color: $secondary-alt;
  font-weight: 350 !important;
}

.navbar .nav-link {
  color: $secondary !important;
  margin-left: 20px;
}

.navbar .navbar-important {
  font-weight: 700;
}
.navbar .navbar-important a {
  text-align: center;
}
.navbar .navbar-important img {
  height: 1rem;
  margin: 0 auto !important;
  padding: 0 !important;
}

.navbar-toggler {
  border-color: $secondary !important;
  color: $secondary !important;
  background-color: $secondary !important;
}



/* ===== HEADER =====*/
/* ===== Isometric 3D Hover effect ===== */
/* https://codepen.io/Aakash_codes/pen/LYWYvGp */
.isometric-holder {
  position: relative;
  width: 100%;
  height: 24rem;
}
.isometric{
  width: 15rem;
  height: 15rem;
  position: absolute;
  top: 50%;
  left: 50%;
  background: url(assets/img/dingocoin.png);
  background-size: cover;
  transform: translate(-50%, -50%) rotateX(25deg) rotateZ(-25deg);
  transform-style: preserve-3d;
  transition: 0.5s;
  box-shadow: -1.5rem 1.5rem 1.8rem rgba(30, 65, 81, 1), -2.4rem 2.4rem 4.8rem rgba(30, 65, 81, 1);
}
.isometric::before{
  content: "";
  width: 100%;
  height: 1.5rem;
  position: absolute;
  bottom: -1.5rem;
  left: 0;
  background: linear-gradient($secondary-alt, $primary);
  transform-origin: top;
  transform: skewX(-45deg) scaleY(0.5);
  transition: 0.5s;
}
.isometric::after{
  content: "";
  width: 1.5rem;
  height: 100%;
  position: absolute;
  top: 0.732rem;
  left: -0.732rem;
  background: linear-gradient(to left, $secondary-alt, $primary);
  transform-origin: left;
  transform: skewY(-45deg) scaleX(0.5);
  transition: 0.5s;
}

.isometric.preload, .isometric:hover{
  transform: translate(-50%, -50%) rotateX(0deg) rotateZ(0deg);
  box-shadow: none;
  background: url(assets/img/dingocoin-rotate.gif);
  background-size: cover;
}
.isometric.preload::before, .isometric:hover::before{
  transform: skewX(-45deg) scaleY(0);
}
.isometric.preload::after, .isometric:hover::after{
  top: 0;
  left: 0;
  transform: skewY(-45deg) scaleX(0);
}

@media (max-width: 768px) {
  .isometric-holder {
    position: relative;
    width: 100%;
    height: 16rem;
  }
  .isometric{
    width: 10rem;
    height: 10rem;
    position: absolute;
    top: 50%;
    left: 50%;
    background: url(assets/img/dingocoin.png);
    background-size: cover;
    transform: translate(-50%, -50%) rotateX(25deg) rotateZ(-25deg);
    transform-style: preserve-3d;
    transition: 0.5s;
    box-shadow: -1rem 1rem 1.2rem rgba(0, 0, 0, 1), -1.6rem 1.6rem 3.2rem rgba(30, 65, 81, 1);
  }
  .isometric::before{
    content: "";
    width: 100%;
    height: 1rem;
    position: absolute;
    bottom: -1rem;
    left: 0;
    background: linear-gradient($secondary-alt, $primary);
    transform-origin: top;
    transform: skewX(-45deg) scaleY(0.5);
    transition: 0.5s;
  }
  .isometric::after{
    content: "";
    width: 1rem;
    height: 100%;
    position: absolute;
    top: 0.488rem;
    left: -0.488rem;
    background: linear-gradient(to left, $secondary-alt, $primary);
    transform-origin: left;
    transform: skewY(-45deg) scaleX(0.5);
    transition: 0.5s;
  }

  .masthead p {
    font-size: 1.5rem !important;
    font-weight: 300;
  }
}

/* ===== Socials ===== */
.socials {
  margin: 1rem auto;
  margin-top: 2rem;
  justify-content: center;
  max-width: 30rem;
  a {
    position: relative;
    width: 3.5rem;
    height: 3.5rem;
    display: block;
    text-align: center;
    margin: 0.5rem auto;
    border-radius: 50%;
    padding: 0.4rem;
    box-sizing: border-box;
    text-decoration: none;
    box-shadow: 0rem 0.6rem 0.9rem rgba(0,0,0,0.3);
    transition: .3s;
    background: linear-gradient(0deg, #ccc, #fff)
  }
  a:hover {
    box-shadow: 0rem 0.1rem 0.15rem rgba(0,0,0,0.3);
  }
  a .faicon {
    padding: 0.5rem;
    width: 100%;
    height: 100%;
    display: block;
    background: linear-gradient(0deg, #fff, #ccc);
    color: #fff;
    border-radius: 50%;
    transition: .3s;
  }
  .socials-button-holder:nth-child(1) a .faicon {
    color: #728ad6;
  }
  .socials-button-holder:nth-child(2) a .faicon {
    color: #3b5a95;
  }
  .socials-button-holder:nth-child(3) a .faicon {
    color: #fe4824;
  }
  .socials-button-holder:nth-child(4) a .faicon {
    color: #0dace9;
  }
}

.quick-actions {
  margin: 1rem auto;
  max-width: 52rem;
  .popup-button {
    margin-top: 1rem;
  }
}

.masthead .masthead-avatar {
  width: 20rem;
  padding: 2rem;
}
.masthead p {
  font-size: 2rem;
  font-weight: 300;
  margin: 0;
  padding: 0;
}



/* ===== SECTIONS ===== */
.section-a {
  padding: 4rem 1.5rem;
  background-color: $secondary;
}

.section-b {
  padding: 4rem 1.5rem;
  background-color: $secondary-alt;
}

.section-footer {
  padding: 1.5rem;
  background-color: $primary;
}
.section-footer h6 {
  color: $secondary !important;
}

.divider-custom {
  margin: 1.25rem 0 1.5rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.divider-custom .divider-custom-line {
  width: 100%;
  max-width: 7rem;
  height: 0.25rem;
  background-color: $primary;
  border-radius: 1rem;
  border-color: $primary !important;
}
.divider-custom .divider-custom-line:first-child {
  margin-right: 1rem;
}
.divider-custom .divider-custom-line:last-child {
  margin-left: 1rem;
}
.divider-custom .divider-custom-icon {
  color: $primary !important;
  font-size: 2rem;
}
.divider-custom.divider-light .divider-custom-line {
  background-color: #fff;
}
.divider-custom.divider-light .divider-custom-icon {
  color: #fff !important;
}


/* ===== POPUP BUTTON ===== */
.popup-button, .popup-button:focus {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  box-shadow: -0.05rem 0.3rem 0 darken($primary, 7%), 0 0.375rem 0.375rem 0.075rem $primary;
}
.popup-button:hover {
  box-shadow: -0.05rem 0.3rem 0 darken($primary, 7%), 0 0.375rem 0.7rem 0.15rem $primary;
}
.popup-button:active, .popup-button:link {
  box-shadow: none !important;
}


/* ===== PROJECTS ===== */

.project-card {
  padding: 1rem;
  margin-top: 0.8rem;
  margin-bottom: 0rem;
}

.project-card .logo-holder {
  width: 100%;
  margin-bottom: 1rem;
  padding: 0;
}

.project-card .faicon {
  color: $primary;
  font-size: 2.5rem;
  padding: 0;
  margin: 0;
}

.project-card img {
  width: 2.5rem;
  padding: 0;
  margin: 0;
}

.project-card p {
  margin-top: 1.5rem;
}



/* ===== WALLETS ===== */
.wallet-section {
  margin: 2rem auto;
  max-width: 30rem;
}
.wallet-section p {
  margin-bottom: 0.5rem;
}

.wallet-download {
  display: inline-block;
}
.wallet-download .faicon {
  color: $primary;
  font-size: 2.0rem;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  width: 100%;
}



/* ===== ROADMAP ===== */

.timeline {
  border-left: 3px solid #2c3e50;
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
  margin: 0 auto;
  letter-spacing: 0.2px;
  position: relative;
  line-height: 1.4em;
  font-size: 1.03em;
  padding: 50px;
  list-style: none;
  text-align: left;
  max-width: 60%;
}

@media (max-width: 767px) {
  .timeline {
    max-width: 98%;
    padding: 25px;
  }
}

.timeline h1 {
  font-weight: 300;
  font-size: 1.4em;
}

.timeline h2,
.timeline h3 {
  font-weight: 600;
  font-size: 1rem;
  margin-bottom: 10px;
}

.timeline .event {
  padding-bottom: 15px;
  margin-bottom: 15px;
  position: relative;
}

@media (max-width: 767px) {
  .timeline .event {
    padding-top: 30px;
  }
}

.timeline .event:last-of-type {
  padding-bottom: 0;
  margin-bottom: 0;
  border: none;
}

.timeline .event:before,
.timeline .event:after {
  position: absolute;
  display: block;
  top: 0;
}

.timeline .event:before {
  left: -207px;
  content: attr(data-date);

  text-align: right;
  font-weight: 900;
  font-size: 0.9em;
  min-width: 120px;
}

.timeline .eventcompleted {
  color: #000000;
}

.timeline .eventincomplete {
  color: #AAAAAA;
}

@media (max-width: 767px) {
  .timeline .event:before {
    left: 0px;
    text-align: left;
  }
}

.timeline .event:after {
  -webkit-box-shadow: 0 0 0 3px #2c3e50;
  box-shadow: 0 0 0 3px #2c3e50;
  left: -55.8px;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  content: '';
  top: 5px;
}

.timeline .eventcompleted:after {
  background: #2c3e50;
}

.timeline .eventincomplete:after {
  background: #ffffff;
}

.card_main .card {
  border: 0;
}

@media (max-width: 767px) {
  .timeline .event:after {
    left: -31.8px;
  }
}

.rtl .timeline {
  border-left: 0;
  text-align: right;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}

.rtl .timeline .event::before {
  left: 0;
  right: -170px;
}

.rtl .timeline .event::after {
  left: 0;
  right: -55.8px;
}

.exchangesModalSection {
  text-align: center;
  margin: 1.5rem auto;
}

.exchangesModalSection img {
  height: 1.2rem;
  margin: 0rem auto !important;
  padding: 0 !important;
}

.exchangesModalSection button {
  padding: 0.3rem 0.5rem;
  margin: 0.3rem 0.5rem;
}


/* ===== Counter ===== */
.projectFactsWrap .item{
  text-align: center;
  padding: 1rem;
  margin: 1rem;
}

.projectFactsWrap .item p.number{
  font-size: 2rem;
  padding: 0;
}

.projectFactsWrap .item p{
  color: $primary;
  font-size: 1rem;
  margin: 0;
}

.projectFactsWrap .item span{
  width: 2.5rem;
  background: $primary;
  height: 0.1rem;
  display: block;
  margin: 0 auto;
}

@media (max-width: 786px){
  .projectFactsWrap .item {
     flex: 0 0 50%;
  }
}

.social-faucet-board {
  text-align: center;
  p {
    margin-bottom: 0;
  }
}

.social-faucet-table {
  overflow: none;
  text-align: center;
}

.social-faucet-table-search {
  border-radius: 0;
}

.table-dingo img {
  height: 1rem;
  width: 1rem;
}

.social-faucet-table tbody .gold {
	background-image: linear-gradient(135deg, yellow, gold, yellow, gold, yellow, gold, yellow, gold);
	background-size: 1000% 1000%;
	animation: diagonalGrad 1s linear infinite;
}
.social-faucet-table tbody .silver {
	background-image: linear-gradient(135deg, silver, grey, silver, grey, silver, grey, silver, grey);
	background-size: 1000% 1000%;
	animation: diagonalGrad 4s linear infinite;
}
.social-faucet-table tbody .bronze {
	background-image: linear-gradient(135deg, #cd7f32, brown, #cd7f32, brown, #cd7f32, brown, #cd7f32, brown);
	background-size: 1000% 1000%;
	animation: diagonalGrad 8s linear infinite;
}
@keyframes diagonalGrad {
    0%{background-position:2% 2%}
    100%{background-position:95% 95%}
}

.social-faucet-instructions {
  text-align: left;
}

